force-app/main/default/objects/Order/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Kustom Kreation Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pre-Orders</relationshipLabel>
    <relationshipName>Pre_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>