force-app/main/default/objects/Order/fields/Order_Location__c.field-meta.xml
<CustomField>
    <fullName>Order_Location__c</fullName>
    <label>Order Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Kustom Kreations Austin</fullName>
            </value>
            <value>
                <fullName>Kustom Kreations Las Vegas</fullName>
            </value>
            <value>
                <fullName>Kustom Kreations Los Angeles</fullName>
            </value>
            <value>
                <fullName>Kustom Kreations Miami</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>