force-app/main/default/objects/Order/fields/Orders__c.field-meta.xml
<CustomField>
    <fullName>Orders__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pre-Orders</relationshipLabel>
    <relationshipName>Pre_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>