force-app/main/default/objects/Order/fields/Prices_del__c.field-meta.xml
<CustomField>
    <fullName>Prices_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store Price Book</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Store_Price_Book__c.Kustom_Kreation_Location__c</field>
            <operation>equals</operation>
            <valueField>Store_Price_Book__c.Kustom_Kreation_Location__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Store_Price_Book__c</referenceTo>
    <relationshipLabel>Pre-Orders</relationshipLabel>
    <relationshipName>Pre_Orders_del</relationshipName>
    <type>Lookup</type>
</CustomField>