force-app/main/default/objects/Order/fields/Wrapping_Choice__c.field-meta.xml
<CustomField>
    <fullName>Wrapping_Choice__c</fullName>
    <label>Wrapping Choice</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Curbside Deluxe</fullName>
            </value>
            <value>
                <fullName>Curbside Executive</fullName>
            </value>
            <value>
                <fullName>Curbside Standard</fullName>
            </value>
            <value>
                <fullName>In Store Deluxe</fullName>
            </value>
            <value>
                <fullName>In Store Executive</fullName>
            </value>
            <value>
                <fullName>In Store Standard</fullName>
            </value>
            <value>
                <fullName>Online Deluxe</fullName>
            </value>
            <value>
                <fullName>Online Executive</fullName>
            </value>
            <value>
                <fullName>Online Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>