force-app/main/default/objects/Order/recordTypes/Curbside.recordType-meta.xml
<RecordType>
    <fullName>Curbside</fullName>
    <active>true</active>
    <label>Curbside</label>
</RecordType>