force-app/main/default/objects/Order/recordTypes/In_Store.recordType-meta.xml
<RecordType>
    <fullName>In_Store</fullName>
    <active>true</active>
    <label>In-Store</label>
</RecordType>