force-app/main/default/objects/Order/recordTypes/Order_Type.recordType-meta.xml
<RecordType>
    <fullName>Order_Type</fullName>
    <active>true</active>
    <description>What method the customer is getting their order</description>
    <label>Order Type</label>
</RecordType>